<resources>

    <string name="app_name">UsahaYuk</string>
    <string name="signup">Daftar</string>
    <string name="login">Masuk</string>
    <string name="title_signup_page">Lengkapi data dirimu di bawah ini ya</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="message_login_page">Masuk di bawah untuk akses akun mu</string>
    <string name="title_login_page">Selamat Datang</string>
    <string name="name">Nama</string>
    <string name="logout">Keluar</string>
    <string name="pass">Password</string>
    <string name="masukgoogle">Masuk Via Google</string>
    <string name="daftar">Daftar</string>
    <string name="nama">Nama</string>
    <string name="masukkan_deskripsi">Masukkan Deskripsi</string>
    <string name="upload">Upload</string>
    <string name="galeri">Galeri</string>
    <string name="camera">Camera</string>
    <string name="deskripsi">Deskripsi</string>
    <string name="registerInfo">Belum Punya Akun?<font color="#0F8A38"> Daftar</font></string>
    <string name="phone">Nomer Handphone</string>
    <string name="sign_in_google">Masuk dengan Akun Google</string>
    <string name="haveAccount">Sudah punya akun sebelumnya?<font color="#0F8A38"> Masuk</font></string>
    <string name="message_register_page">Daftar sekarang untuk mulai usahamu</string>
    <string name="title_welcome_page">Temukan Minat Anda</string>
    <string name="message_welcome_page">Mulailah Perjalanan Bisnis dengan Ide yang Sesuai dengan Minat Anda</string>
    <string name="next">Ayo Mulai</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="beranda">Beranda</string>
    <string name="komunitas">Komunitas</string>
    <string name="konsultasi">Konsultasi</string>
    <string name="profil">Profil</string>
    <string name="welcome_text">Selamat Datang,</string>
    <string name="rekomen_title">Cari Rekomendasi Usaha Anda</string>
    <string name="find_recomend">Mulai Usahayuk</string>
    <string name="tittle2">Kenapa Harus Mulai Usaha ?</string>
    <string name="tips1">“Keberanian untuk memulai adalah kunci untuk mencapai kesuksesan dalam bisnis.”</string>
    <string name="tittlekomunitas1">Temukan Saran di komunitas</string>
    <string name="cardtext1">Strategi pengembangan bisnis UMKM yang sukses di era digital</string>
    <string name="nama_komunitas">Nama Komunitas</string>
    <string name="titlekomunitas2">Kembangkan Koneksi Anda</string>
    <string name="usahaku_title">Usahaku</string>
    <string name="nama_usaha">Nama Usaha</string>
    <string name="pemasukan_usahaku">Pemasukan</string>
    <string name="nominal_pemasukan">Rp.0/ Hari</string>
    <string name="lihat_detail">Lihat Detail</string>
    <string name="masukkan_data">Masukkan Data</string>
    <string name="tingkatkan_penjualan">Tingkatkan Penjualan</string>
    <string name="future_update">Sedang Dalam Pengembangan</string>

    <string name="sukses_title">Berhasil menambahkan ide bisnis</string>
    <string name="sukses_desc">Cek ide bisnismu di menu Usahaku</string>
    <string name="btn_lihat_detail">Lihat Detail</string>
    <string name="kembali_beranda">Kembali ke Beranda</string>
    <string name="isi_data_usaha">Isi Data Usaha</string>
    <string name="title_desc">Kami memerlukan beberapa informasi terkait usaha yang anda inginkan</string>
    <string name="skala_usaha">Skala Usaha</string>
    <string name="mikro">Mikro</string>
    <string name="kecil">Kecil</string>
    <string name="menengah">Menengah</string>
    <string name="modal_usaha">Modal Usaha</string>
    <string name="_3_juta"><![CDATA[<= 3 Juta]]></string>
    <string name="_3_5_juta">3-5 Juta</string>
    <string name="_5_10_juta">5-10 Juta</string>
    <string name="_10_30_juta">10-30 Juta</string>
    <string name="_30_50_juta">30-50 Juta</string>
    <string name="_50_500_juta">50-500 Juta</string>
    <string name="_1_miliar"><![CDATA[<= 1 Miliar]]></string>
    <string name="bidang_usaha">Bidang Usaha</string>
    <string name="pertanian_dan_perkebunan">Pertanian dan Perkebunan</string>
    <string name="perikanan_dan_kelautan">Perikanan dan kelautan</string>
    <string name="industri_makanan_dan_minuman">Industri Makanan dan Minuman</string>
    <string name="industri_fashion_dan_tekstil">Industri Fashion dan Tekstil</string>
    <string name="industri_kerajinan_tangan_dan_souvenir">Industri Kerajinan Tangan dan Souvenir</string>
    <string name="pendidikan_dan_pelatihan">Pendidikan dan Pelatihan</string>
    <string name="jasa_kesehatan_dan_kecantikan">Jasa Kesehatan dan kecantikan</string>
    <string name="jasa_keuangan_dan_perbankan">Jasa Keuangan dan Perbankan</string>
    <string name="jasa_konsultasi_dan_manajemen">Jasa Konsultasi dan Manajemen</string>
    <string name="jasa_teknologi_informasi_dan_komunikasi">Jasa Teknologi Informasi dan Komunikasi</string>
    <string name="jasa_kebersihan">Jasa Kebersihan</string>
    <string name="jasa_keamanan">Jasa Keamanan</string>
    <string name="otomotif">Otomotif</string>
    <string name="omset_usaha">Omset Usaha</string>
    <string name="_0_10_juta">0-10 Juta</string>
    <string name="_11_20_juta">11-20 Juta</string>
    <string name="_21_30_juta">21-30 Juta</string>
    <string name="_31_40_juta">31-40 Juta</string>
    <string name="_41_50_juta">41-50 Juta</string>
    <string name="_50_juta"><![CDATA[>50 Juta]]></string>
    <string name="usia_target">Usia Target</string>
    <string name="_0_23_bulan">0-23 bulan</string>
    <string name="_2_11_tahun">2-11 tahun</string>
    <string name="_12_17_tahun">12-17 tahun</string>
    <string name="_18_39_tahun">18-39 tahun</string>
    <string name="_40_59_tahun">40-59 tahun</string>
    <string name="_60_tahun"><![CDATA[>60 tahun]]></string>
    <string name="gender_target">Gender Target</string>
    <string name="laki_laki">Laki-laki</string>
    <string name="perempuan">Perempuan</string>
    <string name="status_target">Status Target</string>
    <string name="pengangguran">Pengangguran</string>
    <string name="pelajar_mahasiswa">Pelajar/mahasiswa</string>
    <string name="pegawai_negeri_sipil">Pegawai negeri sipil</string>
    <string name="wiraswasta">Wiraswasta</string>
    <string name="petani">Petani</string>
    <string name="nelayan">Nelayan</string>
    <string name="pensiunan">Pensiunan</string>
    <string name="tidak_bekerja_tapi_menerima_penghasilan_pasif">Tidak bekerja tapi menerima penghasilan pasif</string>
    <string name="pekerja_informal">Pekerja informal</string>
    <string name="irt">IRT</string>
    <string name="pekerjaan_target">Pekerjaan target</string>
    <string name="kelas_atas">Kelas atas</string>
    <string name="kelas_menengah">Kelas menengah</string>
    <string name="menuju_kelas_menengah">Menuju kelas menengah</string>
    <string name="kelas_rentan">Kelas rentan</string>
    <string name="kelas_miskin">Kelas miskin</string>
    <string name="jenis_lokasi">Jenis Lokasi</string>
    <string name="pegunungan">Pegunungan</string>
    <string name="pusat_kota_dan_keramaian">Pusat Kota dan Keramaian</string>
    <string name="desa_dan_alam">Desa dan Alam</string>
    <string name="lingkungan_pendidikan">Lingkungan pendidikan</string>
    <string name="pelabuhan_dan_laut">Pelabuhan dan Laut</string>
    <string name="area_wisata">Area Wisata</string>
    <string name="pemukiman_penduduk">Pemukiman penduduk</string>
    <string name="pusat_perbelanjaan">Pusat Perbelanjaan</string>
    <string name="area_peribadahan">Area Peribadahan</string>
    <string name="perkantoran">Perkantoran</string>
    <string name="kawasan_industri">Kawasan Industri</string>
    <string name="terminal_transportasi_umum">Terminal/transportasi umum</string>
    <string name="cari_rekomendasi">Cari Rekomendasi</string>
    <string name="lihat_katasandi">lihat katasandi</string>
    <string name="judul_artikel">Judul Artikel</string>
    <string name="isiArtikel">Di era digital yang semakin maju ini, UMKM (Usaha Mikro, Kecil, dan Menengah) memiliki kesempatan besar untuk mengembangkan bisnis mereka secara signifikan. Teknologi dan akses internet yang luas telah memberikan peluang baru bagi UMKM untuk menjangkau pasar yang lebih luas dan meningkatkan efisiensi operasional mereka. Namun, untuk mencapai kesuksesan di era digital, UMKM perlu mengadopsi strategi yang tepat. Artikel ini akan membahas beberapa strategi pengembangan bisnis UMKM yang sukses di era digital.</string>
    <string name="konfirmasi_password">Konfirmasi Password</string>
    <string name="pass_salah">Password tidak cocok</string>
    <string name="greeting">Selamat Datang, %1$s</string>
    <string name="profile">Profile</string>
    <string name="pengaturan_akun">Pengaturan Akun</string>
    <string name="riwayat">Riwayat Rekomendasi</string>
    <string name="tentang_kami">Tentang Kami</string>
    <string name="artikel_title">Strategi pengembangan bisnis UMKM yang sukses di era digital</string>
    <string name="artikel_author">Ryan Andrayadi Kusyanto</string>
    <string name="baca_selengkapnya">Baca Selengkapnya</string>
    <string name="nama_konsultor">Ahnadi Pramono</string>
    <string name="usaha_konsultor">Pemilik HakukuShop</string>
    <string name="keahlian_konsultor">Ahli Peternakan</string>
    <string name="hubungi">Hubungi</string>
    <string name="profile_consultor">Profile Consultor</string>
    <string name="konsultasi_subtitle">Konsultasikan Usahamu Yuk!</string>
    <string name="konsultasi_desc">Beberapa mentor berpengalaman kami akan membantu untuk akselerasikan usahamu</string>
    <string name="temukan_saran_di_komunitas">Temukan Saran di komunitas</string>
    <string name="hasil_rekomendasi">Hasil Rekomendasi</string>
    <string name="mulai_usaha_yuk">Mulai Usaha Yuk</string>
    <string name="hasil_rekomendasi_desc">Berikut beberapa contoh ide usaha bisnis yang cocok dengan anda</string>
    <string name="isi_data_ulang">Isi data Ulang</string>
    <string name="tambah_artikel">Tambah Artikel</string>
    <string name="edit_profil">Edit Profil</string>
    <string name="isi_artikel">Isi Artikel</string>
    <string name="kirim">Kirim</string>
    <string name="kembali">Kembali</string>


</resources>