<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/beranda"
        android:enabled="true"
        android:icon="@drawable/beranda"
        android:title="@string/beranda"
        android:titleCondensed="@string/beranda"
        />
    <item
        android:id="@+id/komunitas"
        android:enabled="true"
        android:icon="@drawable/komunitas"
        android:title="@string/komunitas"
        android:titleCondensed="@string/komunitas"/>
    <item
        android:id="@+id/konsultasi"
        android:enabled="true"
        android:icon="@drawable/konsultasi"
        android:title="@string/konsultasi"
        android:titleCondensed="@string/konsultasi"/>
    <item
        android:id="@+id/profil"
        android:enabled="true"
        android:icon="@drawable/profil"
        android:title="@string/profil"
        android:titleCondensed="@string/profil"/>
</menu>