<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:backgroundTint="@color/green_surface">

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="200dp"
            app:srcCompat="@drawable/icon_check" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sukses_title"
            android:layout_marginTop="12dp"
            android:fontFamily="@font/poppinsbold"
            android:textSize="18sp"
            />
        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sukses_desc"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/poppinsmedium"
            android:textSize="14sp"
            />

        <Button
            android:id="@+id/button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/white"
            android:text="@string/btn_lihat_detail"
            android:fontFamily="@font/poppinsbold"
            android:textColor="@color/green_main"
            android:layout_marginTop="200dp"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"/>

        <Button
            android:id="@+id/button2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/green_main"
            android:text="@string/kembali_beranda"
            android:fontFamily="@font/poppinsbold"
            android:layout_marginTop="12dp"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"/>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>