<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/card_consultor"
    android:layout_width="match_parent"
    android:layout_height="160dp"
    android:layout_marginStart="1dp"
    android:layout_marginEnd="1dp"
    android:layout_marginTop="4dp"
    android:layout_marginBottom="4dp"
    app:cardCornerRadius="16dp"
    app:cardElevation="2dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/img_avatar"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="24dp"
            android:src="@drawable/sample_avatar"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:contentDescription="@string/profile_consultor"
            tools:ignore="MissingConstraints" />

        <TextView
            android:id="@+id/name_konsul"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:fontFamily="@font/poppinsbold"
            android:text="@string/nama_konsultor"
            android:textSize="16sp"
            app:layout_constraintStart_toEndOf="@+id/img_avatar"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteY="24dp" />

        <TextView
            android:id="@+id/bisnis_konsul"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:fontFamily="@font/poppinsmedium"
            android:text="@string/usaha_konsultor"
            android:textSize="14sp"
            app:layout_constraintStart_toEndOf="@+id/img_avatar"
            app:layout_constraintTop_toBottomOf="@+id/name_konsul" />

        <TextView
            android:id="@+id/keahlian"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:fontFamily="@font/poppinsregular"
            android:text="@string/keahlian_konsultor"
            android:textSize="12sp"
            app:layout_constraintStart_toEndOf="@+id/img_avatar"
            app:layout_constraintTop_toBottomOf="@+id/bisnis_konsul" />

        <Button
            android:id="@+id/button_konsul"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="18dp"
            android:fontFamily="@font/poppinsmedium"
            android:text="@string/hubungi"
            android:textAllCaps="false"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/keahlian"
            app:layout_constraintVertical_bias="0.0"
            tools:ignore="MissingConstraints" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>