<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"

    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <FrameLayout
        android:layout_width="match_parent"
        android:id="@+id/fragment_container"
        android:layout_height="wrap_content">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/homerect"
            tools:context=".ui.mybussiness.UsahakuFragment">

            <TextView
                android:id="@+id/txtWelcome"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="48dp"
                android:fontFamily="@font/poppinsbold"
                android:text="@string/usahaku_title"
                android:textColor="@color/white"
                android:textSize="30sp"
                app:layout_constraintStart_toStartOf="@+id/cardview1"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.cardview.widget.CardView
                android:id="@+id/cardview1"
                android:layout_width="335dp"
                android:layout_height="170dp"
                android:layout_marginTop="38dp"
                android:background="@color/white"
                app:cardCornerRadius="10dp"
                app:cardElevation="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txtWelcome">

                <ImageView
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_marginStart="22dp"
                    android:layout_marginTop="120dp"
                    app:srcCompat="@drawable/pemasukan_icon" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="48dp"
                    android:layout_marginTop="110dp"
                    android:fontFamily="@font/poppinsregular"
                    android:text="@string/pemasukan_usahaku"
                    android:textColor="@color/black"
                    android:textSize="10sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="48dp"
                    android:layout_marginTop="125dp"
                    android:fontFamily="@font/poppinsregular"
                    android:text="@string/nominal_pemasukan"
                    android:textColor="@color/black"
                    android:textSize="12sp" />

                <Button
                    android:id="@+id/btnDetailUsaha"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="200dp"
                    android:layout_marginTop="110dp"
                    android:fontFamily="@font/poppinsmedium"
                    android:text="@string/lihat_detail"
                    android:textAllCaps="false"
                    android:textSize="11sp" />

                <ImageView
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_marginStart="280dp"
                    android:layout_marginTop="28dp"
                    app:srcCompat="@drawable/ic_edit_24" />

                <TextView
                    android:id="@+id/txtTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="21dp"
                    android:layout_marginTop="24dp"
                    android:fontFamily="@font/poppinsbold"
                    android:text="@string/nama_usaha"
                    android:textColor="@color/green_main"
                    android:textSize="20sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.498"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/txtTittle2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="28dp"
                android:fontFamily="@font/poppinsbold"
                android:text="Transaksi Toko Anda"
                android:textColor="@color/green_main"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/cardview1"
                app:layout_constraintTop_toBottomOf="@+id/cardview1" />

            <ImageView
                android:id="@+id/ivStatistic"
                android:layout_width="333dp"
                android:layout_height="221dp"
                app:layout_constraintStart_toStartOf="@id/txtTittle2"
                app:layout_constraintTop_toBottomOf="@id/txtTittle2"
                app:srcCompat="@drawable/statistic_usahaku" />

            <Button
                android:id="@+id/btnInput"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:backgroundTint="@color/dark_blue"
                android:fontFamily="@font/poppinsmedium"
                android:text="@string/masukkan_data"
                android:textAllCaps="false"
                android:textSize="10sp"
                app:layout_constraintStart_toStartOf="@id/ivStatistic"
                app:layout_constraintTop_toBottomOf="@+id/ivStatistic" />

            <Button
                android:id="@+id/btnTingkatkan"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:fontFamily="@font/poppinsmedium"
                android:text="@string/tingkatkan_penjualan"
                android:textAllCaps="false"
                android:textSize="10sp"
                app:layout_constraintStart_toEndOf="@id/btnInput"
                app:layout_constraintTop_toBottomOf="@+id/ivStatistic" />

        </androidx.constraintlayout.widget.ConstraintLayout>


    </FrameLayout>

</ScrollView>
